# BYO-EVAL

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  QUICK_START_DOCKER.md  README.md  docker-compose.yml  environment.yml  evaluate_diagnose_dataset.py  generate_plots.py  pyproject.toml  requirements.txt  ruff.toml  ruff_errors.txt
Noise/: blur.py  light.py  models.py  set_noise_config.py  table_texture.py
blend_files/chess/: chess_standard_2.blend  chess_stone.blend
chess/: README.md  __init__.py  board.py  generate_chess_image.py  generate_img_from_yaml.py  generate_legend.py  test_chess_generation.py
chess/config/: __init__.py  advanced_generator.py  advanced_models.py  difficulty_presets.py  models.py  random_generator.py
chess/dataset/: generate_dataset.py
chess/dataset/dataset_configs/: absolute_localization.yml  count_blur.yml  count_identification.yml  default_config.yml  identification.yml  identification_distance.yml  localization_several_pieces.yml  test_count_config.yml
chess/pieces/: __init__.py  base.py  bishop.py  factories.py  king.py  knight.py  pawn.py  queen.py  rook.py  test_pieces.py
chess/pieces_from_blend/old_school/: pieces.py  test_oldschool_pieces.py
chess/pieces_from_blend/pieces_stones_color/: __init__.py  pieces.py  test_blend_pieces.py
diagnostic/: diagnostic_refactor.py  question_generator.py
diagnostic/diagnostic_configs/: chess_count.yaml  chess_count_blur.yaml  chess_count_identification.yaml  chess_count_multiple_types.yaml  chess_identification_distance.yaml  chess_localization_two_pieces.yaml  poker_count.yaml  poker_count_overlap.yaml  poker_identification_distance.yml  poker_localization.yml
diagnostic/questions/: all_questions.json
docker/: build_and_run.sh  entrypoint.sh  run_chess_dataset.sh  run_diagnostic.sh  run_evaluate.sh  run_poker_dataset.sh
evaluation_pipeline/: answer_extractor.py  get_vlm.py  metrics_calculator.py  metrics_plotter.py  parse_response_from_txt.py  question_handler.py
examples/configs/: chess_example.yml  poker_example.yml
noise/: blur.py  light.py  set_noise_config.py  table_texture.py
poker/: card_dealer.py  card_overlap_builder.py  chip_area_builder.py  chip_dealer.py  generate_img_from_yaml.py  generate_legend.py  load_card.py  load_chip.py  player_builder.py  player_hand_builder.py  player_location_builder.py  river_builder.py  scene_generator.py
poker/config/: models.py
poker/dataset/: generate_cards_with_grid.py  generate_dataset.py
poker/dataset/dataset_configs/: auto_layout_config.yml  basic_identification.yml  count_blur.yml  count_id_with_spread.yml  default_config.yml  horizontal_layout_test.yml  identification_distance.yml  poker_chip_variations.yml  poker_variations.yml  vertical_layout_test.yml
poker/utils/: card_utils.py
scene_setup/: __init__.py  camera.py  general_setup.py  grid.py  models.py  rendering.py  resolution.py
scene_setup/environment/: background.py  floor.py  standard_lighting.py  table.py
src/: create_dataframe.py
utils/: __init__.py  azure_connector.py  blender_utils.py  color_utils.py  pseudonymize_json.py  utils.py
